# panda-topbar

./: CMakeLists.txt  README.md  datetimewidget.cpp  datetimewidget.h  flyma-topbar.pro  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h  panda-topbar.pro  volumewidget.cpp
appmenu/: appmenumodel.cpp  appmenuwidget.cpp  appmenuwidget.h  com.canonical.AppMenu.Registrar.xml  dbusmenutypes_p.h  kdbusimporter.h  menuimporter.cpp  menuimporter.h  menuwidget.cpp
appmenu/libdbusmenu/: dbusmenushortcut_p.cpp  utils.cpp
debian/: changelog  control  copyright
interfaces/: pluginsiterface.h
plugin-datetime/: CMakeLists.txt  datetime.cpp  datetime.h  datetimewidget.cpp
plugin-globalmenu/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  appmenuwidget.cpp  plugin.h
plugin-globalmenu/libdbusmenu/: com.canonical.dbusmenu.xml  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.h  dbusmenutypes_p.cpp
plugin-statusnotifier/: CMakeLists.txt  dbustypes.h  sniasync.cpp  sniasync.h  statusnotifier.cpp  statusnotifier.h  statusnotifier.json  statusnotifierbutton.cpp  statusnotifierbutton.h  statusnotifieriteminterface.h  statusnotifierwatcher.cpp  statusnotifierwatcher.h  statusnotifierwidget.cpp  statusnotifierwidget.h
plugin-tray/: CMakeLists.txt  plugin.h  trayicon.cpp  traywidget.h
topbar/: CMakeLists.txt  mainpanel.cpp  mainpanel.h  mainwindow.cpp  pluginmanager.cpp  pluginmanager.h  resources.qrc
topbar/appmenu/: appmenudbus.cpp  appmenudbus.h  menuwidget.h  org.kde.kappmenu.xml
topbar/appmenu/libdbusmenu/: utils_p.h
topbar/tray/: traywidget.h
topbar/volume/: audiodevice.cpp  audiodevice.h  volumewidget.cpp  volumewidget.h
tray/: trayicon.cpp  trayicon.h  traywidget.cpp  xfitman.cpp  xfitman.h
volume/: audioengine.cpp  audioengine.h  pulseaudioengine.cpp  pulseaudioengine.h
